feat: add step to show cache contents in test workflow

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -121,3 +121,7 @@ jobs:
         retention-days: 30
         if-no-files-found: warn
         include-hidden-files: true
+
+    - name: Show cache contents
+      if: always()
+      run: npx tsx .github/scripts/print-cache.ts
