--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "openai": "5.12.2",
         "semver": "7.7.2",
         "simple-git": "3.28.0",
+        "snyk-nodejs-lockfile-parser": "2.4.2",
         "zod": "^3.23.8"
     }
 }
