fix: update debug log step name to include rocket emoji

--- a/.github/workflows/test-specific.yml
+++ b/.github/workflows/test-specific.yml
@@ -102,7 +102,7 @@ jobs:
       if: always()
       run: npx tsx .github/scripts/debug-files.ts
 
-    - name: 🐛 Debug - Show Git logs from test run
+    - name: 🐛 Debug - Show Git🚀 logs from test run
       if: always()
       run:
         npx tsx .github/scripts/show-git-logs.ts
